# Elastic-Silicon-Interconnect

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  FAQ.md  README.md  build-mlir.sh  compiling.md  pytest.ini  run_docker.ps1  setup_dev_env_win.ps1
.github/workflows/: esi_ci.yml
docs/concepts/: index.md  mmio.md  notes.md  services.md  software_api.md  streaming.md  types.md
docs/design/: cosim.md
docs/systemVerilogExamples/: exampleSchema.capnp  exampleSchema.sv  exampleSchema.svh  polynomial.sv  polynomial_tb.sv
dotnet_src/build_support/: esi_interface.hwcgt.py
dotnet_src/core/: common.props  core.sln  runTestsCodeCoverage.ps1  testSettings.runsettings
dotnet_src/core/SVCodeGen/: EsiSystemVerilogConsts.cs  EsiSystemVerilogExts.cs  EsiSystemVerilogInterfaceWriter.cs  EsiSystemVerilogTypeWriter.cs  EsiSystemVerilogUtils.cs  EsiVerilogCompoundWriter.cs  Program.cs  SVCodeGen.csproj
dotnet_src/core/capnp.convert/: EsiCapnpConvert.cs  EsiCapnpReader.cs  EsiCapnpWriter.cs  EsiCoreAnnotations.capnp
dotnet_src/core/core/: EsiCommonCommandOptions.cs  EsiContext.cs  EsiDataTypes.cs  EsiInterface.cs  EsiMetaTypes.cs  EsiObject.cs  EsiSchemaCommonExts.cs  EsiSchemaModel_Compare.cs  EsiSystem.cs  EsiUtils.cs
dotnet_src/core/cosim/MtiPliStub/: CMakeLists.txt
dotnet_src/core/cosim/dummy_simulator/: CMakeLists.txt
dotnet_src/core/cosim/tests/loopback/: driver.sv
dotnet_src/core/support/sv/: full_interface.sv.sbntxt  type_interface.sv.sbntxt
dotnet_src/core/tests/: CapnpTest.cs  EsiTest.cs  capnp.mk  unittests.csproj
dotnet_src/core/tests/stress_tests/: Makefile  Shape_QueryProcessor.sv  Shape_tb.sv  Stress1.cs  Stress1_CapnpWrite.cs  stress1_test.py
dotnet_src/core/tests/toy_example/: Makefile
src/: CMakeLists.txt  hwroot.yml
src/build_support/: esi_interface.hwcgt.py
src/core/: common.props  core.sln
src/core/CppCodeGen/: CppApiWriter.cs  CppCodeGen.csproj  CppConsts.cs  CppExts.cs  CppTypeWriter.cs  Program.cs
src/core/CppCodeGen/support_includes/: EsiCompounds.hpp
src/core/SVCodeGen/: EsiSystemVerilogConsts.cs  EsiSystemVerilogExts.cs  EsiSystemVerilogInterface.cs  EsiSystemVerilogInterfaceWriter.cs  EsiSystemVerilogTypeWriter.cs  EsiVerilogCompoundWriter.cs  Program.cs  SVCodeGen.csproj
src/core/capnp/: EsiCapnpConvert.cs  EsiCoreAnnotations.capnp  capnp.csproj
src/core/capnp.convert/: CapnpSchema.capnp  EsiCapnpConvert.cs  EsiCapnpReader.cs  EsiCapnpWriter.cs  capnp.csproj
src/core/core/: EsiCommonCommandOptions.cs  EsiContext.cs  EsiDataTypes.cs  EsiInterface.cs  EsiMetaTypes.cs  EsiObject.cs  EsiRazor.cs  EsiSchemaModel_Compare.cs  EsiSystem.cs  EsiUtils.cs  core.csproj
src/core/cosim/MtiPliStub/: DummySvDpi.cpp
src/core/cosim/cosim_dpi_server/: CMakeLists.txt  DpiEntryPoints.cpp  EndPoint.cpp  EsiCosimDpiServer.cpp  Makefile  Server.cpp  esi_cosim_dpi.capnp
src/core/cosim/cosim_dpi_server/include/: EndPoint.hpp  Server.hpp  dpi.hpp  dpi.hxx  dpi_generated.h  svdpi.h
src/core/cosim/dummy_simulator/: dummy.cpp
src/core/cosim/rtl/: Cosim_DpiPkg.sv  Cosim_Endpoint.sv  Makefile  driver.cpp  driver.sv
src/core/cosim/rtl/CosimCore/: CosimCore_DpiPkg.sv  CosimCore_EndpointPkg.sv
src/core/cosim/tests/: base_dpi_test.py
src/core/cosim/tests/loopback/: Makefile  base_dpi_test.py  driver.cpp  driver.sv
src/core/schema/: EsiCapnpConvert.cs  EsiCoreAnnotations.capnp  EsiDataTypes.cs  EsiInterface.cs  EsiSchemaCommonExts.cs  EsiSchemaModel.cs  EsiSchemaModel_Compare.cs  schema.csproj
src/core/support/sv/: full_interface.sv.rzr  full_interface.sv.sbntxt  type_header.sv.sbntxt  type_interface.sv.rzr
src/core/tests/: .gitignore  CapnpTest.cs  EsiTest.cs  capnp.mk  unittests.csproj
src/core/tests/simple_example/: simple_types.capnp
src/core/tests/stress_tests/: Makefile  Shape_ComputeArea.sv  Shape_tb.sv  Stress1.cs  Stress1_CapnpWrite.cs  stress1.capnp  stress1_fail.capnp  stress1_failsyntax.capnp  stress1_synth.capnp  stress1_test.py
src/core/tests/toy_example/: Makefile  ToyUnitTest.cs  toy_test.py
src/core/utils/: EsiUtils.cs
src/cosim/: CMakeLists.txt
src/cosim/MtiPliStub/: CMakeLists.txt  DummySvDpi.cpp
src/cosim/cosim_dpi_server/: CMakeLists.txt  DpiEntryPoints.cpp  EndPoint.cpp  Server.cpp
src/cosim/dummy_simulator/: CMakeLists.txt  dummy.cpp
src/cosim/include/: EndPoint.hpp  Server.hpp  dpi.hpp
src/cosim/tests/loopback/: Makefile  base_dpi_test.py  driver.cpp  driver.sv
src/include/: CMakeLists.txt
src/include/Dialects/: CMakeLists.txt
src/include/Dialects/Esi/: CMakeLists.txt  EsiDialect.hpp  EsiDialect.td  EsiOps.hpp  EsiOps.td  EsiOpsTypes.hpp  EsiTypes.hpp  EsiTypes.td
src/include/capnp/: CMakeLists.txt  CapnpConvert.hpp
src/include/mlir/: CMakeLists.txt
src/include/mlir/Dialect/Esi/: CMakeLists.txt  EsiDialect.td  EsiOps.td
src/lib/: CMakeLists.txt
src/lib/capnp/: CMakeLists.txt  ConvertToESI.cpp
src/lib/mlir/Esi/: CMakeLists.txt  EsiDialect.cpp  EsiOps.cpp  EsiTypes.cpp
src/test_utils/: cmd.py
src/tools/: CMakeLists.txt
src/tools/esi/: CMakeLists.txt  esic.cpp
src/tools/esi-capnp/: CMakeLists.txt  esi-capnp.cpp
tests/capnp/stress_tests/: Shape_ComputeArea.sv  Shape_QueryProcessor.sv  shape.hwlib.yml  stress1_synth.capnp  stress1_test.py
tests/capnp/toy_example/: Makefile  ToyUnitTest.cs  toy.capnp
tests/mlir/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
tests/mlir/esi/: all_types.mlir  compound_types.mlir  dummy.mlir  fractional_types.mlir
